--- a/workbox-esbuild/package.json
+++ b/workbox-esbuild/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "esbuild": "^0.25.9",
+    "idb": "^8.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "workbox-background-sync": "^7.3.0",
